--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -80,12 +80,109 @@
     font-weight: 600;
     line-height: 1.1;
     height: 30px;
+    margin: 0;
 }
 
 .product-description {
     font-size: 12px;
     color: gray;
 }
+
+/* Стрелки для Swiper */
+.swiper-button-prev,
+.swiper-button-next {
+    color: #ff5722; /* Оранжевый цвет стрелок */
+    font-weight: bold;
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+    color: #ff9800; /* Изменение цвета при наведении */
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+.modal-content {
+    position: relative;
+    width: 90%;
+    max-width: 800px;
+    
+    background: #fff;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  
+  .swiper-modal {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .swiper-modal img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+/* Кнопка закрытия (увеличена и окрашена в черный) */
+    .modal-close {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        color: black !important; /* Черный цвет */
+        font-size: 70px !important; /* Увеличенный размер */
+        font-weight: bold;
+        cursor: pointer;
+        z-index: 10;
+    }
+
+    .modal-close:hover {
+        color: #ff0000; /* Цвет при наведении (можешь поменять) */
+    }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    color: #000000 !important;
+  }
+  
+  /* Немного увеличим стрелки для удобства */
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    font-size: 30px !important;
+  }
+
+/* Убраны стрелки */
+
+/* Черно-белые точки */
+.swiper-pagination-bullet {
+    background: #979797; /* Серый цвет */
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin: 0 5px;
+    border: 1px solid #fffefe;
+    transition: opacity 0.3s;
+}
+
+.swiper-pagination-bullet-active {
+    background: #ffffff; /* Черный цвет для активной точки */
+    opacity: 1;
+}
+
+
 
 /* Media Queries */
 @media (max-width: 1400px) {
